--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section class="hero">
         <div class="container">
-            <h2>最高の仲間と、あなたで</h2>
+            <h2>最高の仲間を見つけよう！</h2>
             <p></p>
         </div>
     </section>
